On small screens our images in the news appear to be cut because they have a fixed width. This CSS line will fix it.

--- a/wiki/src/local.css
+++ b/wiki/src/local.css
@@ -480,6 +480,11 @@ div.inlinepage {
     top:5px;
 }
 
+.inlinepage img {
+    max-width: 100%;
+    height: auto;
+}
+
 #footer {
     padding-left: 20px;
     padding-top: 36px;
